# AIPortal

./: .env.example  .gitignore  ARCHITECTURE.md  CANVAS_LAYER_ARCHITECTURE.md  CLAUDE.md  E2E_TEST_PROGRESS.md  GEMINI_IMAGE_EDITING_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  INDIVIDUAL_CANVAS_SYSTEM.md  PROGRESS_UPDATE.md  PROGRESS_UPDATE_20250811.md  PROGRESS_UPDATE_v3.md  PROGRESS_UPDATE_v4.1.md  README.md  TEMPLATE_SYSTEM_SUMMARY.md  TEST_GUIDE.md  dev_plan.md  develop.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  simple_test_server.py  test_websocket.html  test_websocket_client.py
.claude/: settings.local.json
backend/: .env.example  alembic.ini  check_generated_images.py  create_generated_images_table.py  create_tables.py  pytest.ini  requirements.txt  requirements_simplified.txt  requirements_test.txt  setup_api_keys.py  simple_test.py  test_add_image_history.py  test_full_system.py  test_integration.py  test_server.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  (+3 more)
backend/docs/: logging.md
backend/scripts/: init_db.py
backend/tests/: conftest.py.bak  conftest_simple.py
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js.bak  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: init_postgres.sql  quick_setup.sh  run_backend.sh  run_frontend.sh  setup.sh  start-dev.sh
tests/e2e/: api-integration.spec.ts  basic.spec.ts  chat-advanced.spec.ts  chat-basic.spec.ts  health-check.spec.ts  simple.spec.ts
(+274 files in other folders)
